--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DEBUG=True
-SECRET_KEY=le@@-b73z72q#9a++y$s_u0vc687s4jp@0@zvuto^0%sax(_40
+SECRET_KEY=&)@-0$s_x46@=klodaq+66s3g9fso-mykmdi%v1v36y7ie!n0)
 DB_NAME=databasename
 DB_USER=databaseuser
 DB_PASS=databasepass
